# FastApi-F1DataHub

./: .gitignore  README.md  main.py  pyproject.toml
static/: style.css
templates/: base.html  constructors_standings.html  current_schedule.html  driver_standings.html  home.html  results.html
