[tool.poetry]
name = "fastapi-f1data-hub"
version = "0.1.0"
description = ""
authors = ["Tomz899 <tomek.nowak@aol.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
requests = "^2.31.0"
jinja2 = "3.0.3"
aiofiles = "^23.2.1"
httpx = "^0.25.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
